# rust-oem-cp

./: Cargo.toml  LICENSE  README.md  build.rs  cspell.json  fetch_table.py  generate_table.py
.github/workflows/: master.yml  prepare-draft.yaml  release.yml
assets/: code_tables.json  code_tables_patch_win.json
src/: code_table.generated.rs  code_table.rs  code_table_type.rs  lib.rs  string.rs
tests/: code_table_generator.rs
