[package]
name = "oem_cp"
version = "1.1.0"
authors = ["Tatsunori Uchino <tats.u@live.jp>"]
edition = "2018"
categories = ["encoding"]
keywords = ["encoding", "charset"]
license = "MIT"
description ="Rust library that handles OEM code pages (e.g. CP{437,737,850}) for single byte character sets"
readme = "README.md"
repository = "https://github.com/tats-u/rust-oem-cp/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.2"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3.9", features = ["winnls", "stringapiset", "winerror","errhandlingapi"] }
itertools = "<2"
