[package]
name = "oem_cp"
version = "2.1.1"
authors = ["Tatsunori Uchino <tats.u@live.jp>"]
edition = "2021"
categories = ["encoding"]
keywords = ["encoding", "charset"]
license = "MIT"
description ="Rust library that handles OEM code pages (e.g. CP{437,737,850}) for single byte character sets"
readme = "README.md"
repository = "https://github.com/tats-u/rust-oem-cp/"

include = [
  "src",
  "LICENSE",
]

[features]
default = ["alloc"]
alloc = []

[dependencies]
phf = { version = "0.11", default-features = false }

[dev-dependencies]
once_cell = "1"
phf_codegen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snapshot-testing = "0.1.8"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3.9", features = ["winnls", "stringapiset", "winerror","errhandlingapi","winbase"] }
itertools = "<2"
